cmake_minimum_required(VERSION 3.22)
include(CMakePrintHelpers)

project(hyperborg)
add_compile_definitions(Q_COMPILER_INITIALIZER_LISTS)

message("PLATFORM:")
cmake_print_variables(CMAKE_CXX_PLATFORM_ID)
message("SYSTEM:")
cmake_print_variables(CMAKE_SYSTEM_NAME)

if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
    add_compile_definitions(PF_LINUXx)
    add_subdirectory(plugins/backup)
    add_subdirectory(plugins/backupserver)
    add_subdirectory(plugins/calendar)
    add_subdirectory(plugins/dfr0971)
    add_subdirectory(plugins/heishamon)
    add_subdirectory(plugins/hhc_n8i8op)
    add_subdirectory(plugins/huawei_sun)
    add_subdirectory(plugins/hue)
    add_subdirectory(plugins/medialibrary)
    add_subdirectory(plugins/mqtt)
    add_subdirectory(plugins/onewire)
    add_subdirectory(plugins/panacc)
    add_subdirectory(plugins/paradox)
    add_subdirectory(plugins/speech)
    add_subdirectory(plugins/system)
    add_subdirectory(plugins/ws3500)
    add_subdirectory(plugins/hb_i2c)
    add_subdirectory(plugins/bme688)
    add_subdirectory(plugins/bme688_bsec)
endif()

if (CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
    add_compile_definitions(PF_WASM)
endif()

if (CMAKE_SYSTEM_NAME STREQUAL "Android")
    add_compile_definitions(PF_ANDROID)
    message("---ANDROID---")
endif()

add_subdirectory(node)


